libsql-server/src/schema/snapshots/libsql_server__schema__db__test__enqueue_migration_job-3.snap
---
source: libsql-server/src/schema/db.rs
expression: rows.next().unwrap().unwrap()
---
{
    Ok(
        "task_id",
    ): (
        Integer,
        2,
    ),
    Ok(
        "job_id",
    ): (
        Integer,
        1,
    ),
    Ok(
        "target_namespace",
    ): (
        Text,
        "ns3",
    ),
    Ok(
        "status",
    ): (
        Integer,
        0,
    ),
    Ok(
        "error",
    ): (
        Null,
        (),
    ),
}
