libsql-server/src/schema/snapshots/libsql_server__schema__db__test__pending_job-2.snap
---
source: libsql-server/src/schema/db.rs
assertion_line: 481
expression: tasks
---
[
    MigrationTask {
        namespace: ns1,
        status: Enqueued,
        job_id: 1,
        task_id: 1,
        backup_sync: None,
    },
    MigrationTask {
        namespace: ns2,
        status: Enqueued,
        job_id: 1,
        task_id: 2,
        backup_sync: None,
    },
    MigrationTask {
        namespace: ns3,
        status: Enqueued,
        job_id: 1,
        task_id: 3,
        backup_sync: None,
    },
]
